Fix vertical spacing on login page, add to logout route comment for clarity

--- a/frontend/src/app/account-login/account-login.component.css
+++ b/frontend/src/app/account-login/account-login.component.css
@@ -5,7 +5,6 @@
 }
 
 .signin-title {
-  margin-bottom: 24px;
   font-size: 56px;
   font-weight: 600;
   line-height: 1.25em;
@@ -13,15 +12,14 @@
 }
 
 .signin-desc {
-  margin-top: 24px;
-  margin-bottom: 24px;
+  margin-top: 48px;
+  margin-bottom: 48px;
   font-size: 20px;
   line-height: 1.25em;
   user-select: none;
 }
 
 #signin-google {
-  margin-top: 24px;
   width: 160px;
   height: 48px;
 }
